[package]
name = "foliage-ai-native"
version = "0.1.0"
edition = "2021"

[lib]
name = "foliageai"
crate-type = ["cdylib"]

[dependencies]
anyhow = { version = "*" }
jni = "0.21.1"
candle = { version = "0.6.0", package = "candle-core" }
candle-nn = { version = "0.6.0" }
candle-transformers = { version = "0.6.0" }
candle-flash-attn = { version = "0.6.0", optional = true }
tokenizers = { version = "0.19.1", features = ["onig"] }
serde_json = { version = "*" }

[features]
default = ["cuda"]
cuda = ["candle/cuda", "candle-nn/cuda", "candle-transformers/cuda"]